<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">视频</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">hey,byd!</string>

    <!-- Video -->
    <string name="video_page">视频</string>
    <string name="failed_to_play">视频播放失败</string>
    <string name="local_video">本地视频</string>
    <string name="sdcard">存储卡</string>
    <string name="usb">USB</string>
    <string name="play_history">播放历史</string>
    <string name="delete">删除</string>
    <string name="select_all">全选</string>
    <string name="edit">编辑</string>
    <string name="cancel">取消</string>
    <string name="waiting">请稍等...</string>
    <string name="select_tips">请至少选择一个文件</string>
    <string name="no_records_video">未找到相关视频</string>
    
    
    <!-- Audio -->
    <string name="audio_page">音乐</string>
    <string name="btn_text_local">本地音乐</string>
    <string name="btn_text_sdcard">存储卡</string>
    <string name="search">搜索</string>
    <string name="audio_player">音乐播放</string>
    <string name="btn_text_usb">USB</string>
    <string name="btn_text_aux">AUX</string>
    <string name="btn_text_mobile">手机音乐</string>
    <string name="btn_search_byname">按歌曲</string>
    <string name="btn_search_bysinger">按演唱者</string>
    <string name="search_hint">搜索歌曲</string>
    <string name="title_audio_local">本地音乐</string>
    <string name="title_audio_sdcard">存储卡音乐</string>
    <string name="title_audio_usb">USB音乐</string>
    <string name="delete_all">全部删除</string>

    <string name="audio_fx_none">无</string>
    <string name="audio_fx_classical">古典</string>
    <string name="audio_fx_dance">舞曲</string>
    <string name="audio_fx_flat">平直</string>
    <string name="audio_fx_folk">民谣</string>
    <string name="audio_fx_heavymetal">重金属</string>
    <string name="audio_fx_hiphop">嘻哈</string>
    <string name="audio_fx_jazz">爵士</string>
    <string name="audio_fx_pop">流行</string>
    <string name="audio_fx_rock">摇滚</string>

    <!-- Aux -->
    <string name="aux_title">AUX连接</string>
    <string name="aux_connected">AUX音频设备已连接</string>
    <string name="aux_disconnected">AUX音频设备未连接</string>
    
    <!-- BT -->
    <string name="txt_bt_search">搜索蓝牙</string>
    <string name="txt_bt_switch">蓝牙开关</string>
    <string name="txt_bt_visible">蓝牙可见</string>
    <string name="txt_bt_exit">退出</string>
    <string name="enter_pin_code_prompt">请输入配对码</string>
    <string name="auto_connect">自动连接</string>
</resources>