<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/audio_fx_group"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#CF000000"
    android:paddingLeft="10dp"
    android:paddingRight="30dp"
    android:orientation="vertical" >

    <RadioButton
        android:id="@+id/fx_none"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/audio_fx_none" />

    <RadioButton
        android:id="@+id/fx_classical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/audio_fx_classical" />

    <RadioButton
        android:id="@+id/fx_dance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/audio_fx_dance" />

    <RadioButton
        android:id="@+id/fx_flat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/audio_fx_flat" />

    <RadioButton
        android:id="@+id/fx_folk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/audio_fx_folk" />

    <RadioButton
        android:id="@+id/fx_heavymetal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/audio_fx_heavymetal" />

    <RadioButton
        android:id="@+id/fx_hiphop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/audio_fx_hiphop" />

    <RadioButton
        android:id="@+id/fx_jazz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/audio_fx_jazz" />

    <RadioButton
        android:id="@+id/fx_pop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/audio_fx_pop" />

    <RadioButton
        android:id="@+id/fx_rock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/audio_fx_rock" />

</RadioGroup>