<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">

	<LinearLayout 
	    android:id="@+id/LinearLayout01"
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content">
		<TextView 
		    android:id="@+id/TextView01" 
		    android:layout_height="wrap_content" 
		    android:text="@string/txt_bt_switch" 
		    android:layout_width="100dip"></TextView>
		<ToggleButton 
		    android:layout_height="wrap_content" 
		    android:layout_width="wrap_content" 
		    android:id="@+id/tbtnSwitch"></ToggleButton>
		<Button android:layout_height="wrap_content" 
	   		android:text="@string/txt_bt_visible" 
	    	android:id="@+id/btnDis" 
	    	android:layout_width="160dip"></Button>
	</LinearLayout>
	
	<LinearLayout 
	    android:id="@+id/LinearLayout02"
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content">
		<Button 
		    android:layout_height="wrap_content" 
		    android:id="@+id/btnSearch"
			android:text="@string/txt_bt_search" 
			android:layout_width="160dip"></Button>
		<Button 
		    android:layout_height="wrap_content" 
		    android:id="@+id/btnExit"
			android:text="@string/txt_bt_exit" 
			android:layout_width="160dip"></Button>
	</LinearLayout>

	<ListView 
	    android:layout_width="fill_parent" 
	    android:id="@+id/lvDevices"
		android:layout_height="fill_parent">
	</ListView>

</LinearLayout>
