<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" 
	android:gravity="center_horizontal"
	android:layout_width="match_parent" 
	android:layout_height="match_parent"
	android:background="@android:color/black">
	
    <RelativeLayout android:layout_width="match_parent" 
        android:layout_height="0dp"
        android:layout_weight="1">
        
	    <FrameLayout android:layout_width="match_parent" 
	        android:layout_height="match_parent"
	        android:layout_marginTop="-14dp"
	        android:layout_below="@+id/header"
	        android:id="@+id/media_content_frame"/>
	    
	    <include android:id="@+id/header" layout="@layout/header_browser"/>
	    
    </RelativeLayout>
	
	<FrameLayout android:layout_width="match_parent" 
        android:layout_height="wrap_content"
        android:background="@drawable/footer_bg"
        android:paddingTop="1dp"
        android:paddingBottom="1dp"
        android:layout_gravity="bottom">
		<LinearLayout android:layout_width="match_parent" 
	        android:layout_height="wrap_content"
	        android:id="@+id/tab_layout"
	        android:gravity="center_vertical"
	        android:orientation="horizontal">
		    <ImageView android:id="@+id/tvLocal"
		        style="@style/browser_footer_tab"
		        android:drawableLeft="@drawable/icon_tab_video"
		        android:src="@drawable/tab_local_selector_en"                          
		        android:text="@string/local_video"/>
		    <ImageView android:id="@+id/tvSDCard"
	            style="@style/browser_footer_tab"
	            android:drawableLeft="@drawable/icon_tab_sdcard"
	            android:src="@drawable/tab_sdcard_selector_en"
	            android:text="@string/sdcard"/>
	        <ImageView android:id="@+id/tvUsb"
	            style="@style/browser_footer_tab"
	            android:src="@drawable/tab_usb_selector_en"
	            android:drawableLeft="@drawable/icon_tab_usb"
	            android:text="@string/usb"/>
	        <ImageView android:id="@+id/tvHistory"
	            style="@style/browser_footer_tab"
	            android:src="@drawable/tab_history_selector_en"
	            android:drawableLeft="@drawable/icon_tab_history"
	            android:text="@string/play_history"/>
		</LinearLayout>
	    <LinearLayout android:layout_width="match_parent" 
            android:layout_height="match_parent"
            android:id="@+id/edit_layout"
            android:visibility="gone"
            android:gravity="center">
	        <TextView android:id="@+id/tvDelete"
	            android:layout_width="wrap_content" 
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                android:layout_margin="10dp"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                android:clickable="true"
                android:background="@drawable/browser_footer_tab_selected"
                android:text="@string/delete"/>
        </LinearLayout>
	</FrameLayout>
</LinearLayout>